# diskcomp

./: .gitignore  LICENSE  README.md  ROADMAP.md  build_binary.sh  build_single.py  create_release.md  diskcomp.spec  homebrew-diskcomp.rb  publish.sh  pyproject.toml  test_build_local.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml  release.yml  test-builds.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-core-engine-report/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-terminal-ui/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-drive-health-setup/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-RESEARCH.md  03-UAT.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/reports/: 20260323-session-report.md
diskcomp/: __init__.py  __main__.py  ansi_codes.py  benchmarker.py  cli.py  deletion.py  drive_picker.py  hasher.py  health.py  loading.py  reporter.py  scanner.py  types.py  ui.py
tests/: test_cli.py  test_deletion.py  test_drive_filter.py  test_drive_picker.py  test_hasher.py  test_health.py  test_integration.py  test_performance.py  test_reporter.py  test_scanner.py  test_ui.py  test_ui_integration.py
(+60 files in other folders)
